--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -614,6 +614,16 @@
       "component": {
         "type": "other",
         "other": {
+          "name": "checksec",
+          "version": "2.4.0",
+          "downloadUrl": "https://github.com/slimm609/checksec.sh/archive/2.4.0.tar.gz"
+        }
+      }
+    },
+    {
+      "component": {
+        "type": "other",
+        "other": {
           "name": "chkconfig",
           "version": "1.11",
           "downloadUrl": "https://github.com/fedora-sysv/chkconfig/archive/1.11.tar.gz"
